maths fixes: linear algebra section

--- a/notebooks/c_mathematics/linear_algebra/3_Theory.ipynb
+++ b/notebooks/c_mathematics/linear_algebra/3_Theory.ipynb
@@ -22,18 +22,18 @@
     "3. There exists an element $\\mathbf{0} \\in V^n$, called the zero vector, such that $\\mathbf{x} + \\mathbf{0} = \\mathbf{x}$ for all $\\mathbf{x} \\in V^n$\n",
     "4. For all $\\mathbf{x} \\in V^n$ there exists an inverse element $-\\mathbf{x} \\in V^n$ such that $\\mathbf{x} + (-\\mathbf{x}) = \\mathbf{0}$\n",
     "5. Distributivity of scalar multiplication with respect to addition in $V^n$: $\\alpha (\\mathbf{x} + \\mathbf{y}) = \\alpha \\mathbf{x} + \\alpha \\mathbf{y}$ for all $x, y \\in V^n$ and $\\alpha \\in \\mathbb{R}$\n",
-    "6. Distributivity of scalar multiplication with respect to addition in $\\mathbb{R}$: \\\\( (\\alpha + \\beta)\\mathbf{x} = \\alpha \\mathbf{x} + \\beta \\mathbf{x} \\\\)\n",
+    "6. Distributivity of scalar multiplication with respect to addition in $\\mathbb{R}$: $ (\\alpha + \\beta)\\mathbf{x} = \\alpha \\mathbf{x} + \\beta \\mathbf{x} $\n",
     "7. Compatibility of multiplication: $\\alpha (\\beta \\mathbf{x}) = (\\alpha \\beta)\\mathbf{x}$ for all $\\mathbf{x} \\in V^n$ and $\\alpha, \\beta \\in \\mathbb{R}$\n",
     "8. Identity element of scalar multiplication: $1\\mathbf{x} = \\mathbf{x}$, where $1$ denotes the multiplicative identity in $\\mathbb{R}$\n",
     "\n",
-    "For a set to be closed under addition, it means that \\\\( \\mathbf{x} + \\mathbf{y} \\in V^n\\\\) for all $\\mathbf{x}, \\mathbf{y} \\in V^n$. Or in words, a sum of two arbitrary vectors from $V^n$ is also in $V^n$. Similarly, for the set to be closed under scalar multiplication, $\\alpha \\mathbf{x} \\in V^n$ for all $\\alpha \\in \\mathbb{R}$ and $\\mathbf{x} \\in V^n$. These two operations allow us to freely scale our vectors and to form linear combinations of vectors while still remaining in the same vector space.\n",
+    "For a set to be closed under addition, it means that $ \\mathbf{x} + \\mathbf{y} \\in V^n$ for all $\\mathbf{x}, \\mathbf{y} \\in V^n$. Or in words, a sum of two arbitrary vectors from $V^n$ is also in $V^n$. Similarly, for the set to be closed under scalar multiplication, $\\alpha \\mathbf{x} \\in V^n$ for all $\\alpha \\in \\mathbb{R}$ and $\\mathbf{x} \\in V^n$. These two operations allow us to freely scale our vectors and to form linear combinations of vectors while still remaining in the same vector space.\n",
     "\n",
     "### Linear combination of vectors\n",
     "\n",
     "```{index} Linear combination \n",
     "```\n",
     "\n",
-    "Let $\\mathbf{z} \\in V^n$ and let \\\\( \\mathbf{u}_1, \\mathbf{u}_2, \\dots, \\mathbf{u}_k\\\\) also be vectors in $V^n$. If we can write $\\mathbf{z}$ as:\n",
+    "Let $\\mathbf{z} \\in V^n$ and let $ \\mathbf{u}_1, \\mathbf{u}_2, \\dots, \\mathbf{u}_k$ also be vectors in $V^n$. If we can write $\\mathbf{z}$ as:\n",
     "\n",
     "$$ \\mathbf{z} = \\alpha_1 \\mathbf{u}_1 + \\alpha_2 \\mathbf{u}_2 + \\dots + \\alpha_k \\mathbf{u}_k $$\n",
     "\n",
@@ -188,7 +188,7 @@
     "\n",
     "If we find a set of $n - \\text{rank}(A)$ linearly independent vectors in $\\text{null}(A)$ they will form a basis for $\\text{null}(A)$. We can then express every vector in $\\text{null}(A)$ as a linear combination of the basis vectors.\n",
     "\n",
-    "**Side note.** A non-homogeneous system of linear equations $A\\mathbf{x} = \\mathbf{b}$ can be equivalently written as \\\\( A\\mathbf{x} + A\\mathbf{x}_h = \\mathbf{b} + \\mathbf{0}\\\\), where $A\\mathbf{x}_h = \\mathbf{0}$ is a homogeneous system with solution $\\mathbf{x}_h \\in \\text{null}(A)$, since $\\mathbf{b} + \\mathbf{0} = \\mathbf{b}$. We can further simplify this by writing:\n",
+    "**Side note.** A non-homogeneous system of linear equations $A\\mathbf{x} = \\mathbf{b}$ can be equivalently written as $ A\\mathbf{x} + A\\mathbf{x}_h = \\mathbf{b} + \\mathbf{0}$, where $A\\mathbf{x}_h = \\mathbf{0}$ is a homogeneous system with solution $\\mathbf{x}_h \\in \\text{null}(A)$, since $\\mathbf{b} + \\mathbf{0} = \\mathbf{b}$. We can further simplify this by writing:\n",
     "\n",
     "$$A\\mathbf{x} + A\\mathbf{x}_h = A(\\mathbf{x} + \\mathbf{x}_h) = \\mathbf{b}. $$\n",
     "\n",
@@ -297,11 +297,11 @@
     "\n",
     "$$ R = \\begin{pmatrix} \\cos \\varphi & -\\sin \\varphi \\\\ \\sin \\varphi & \\cos \\varphi \\end{pmatrix}. $$\n",
     "\n",
-    "Let us think geometrically and try to find the inverse of this matrix. When multiplying a vector $\\mathbf{u}$, the product $R\\mathbf{u} = \\tilde{\\mathbf{u}}$ is a vector rotated counterclockwise in the $xy$-plane by an angle $\\varphi$, measured from the positive $x$ axis. An inverse of $R$, $R^{-1}$, has to be such that \\\\( R^{-1}\\tilde{\\mathbf{u}} = \\mathbf{u}\\\\), i.e. it will act to rotate by exactly the same angle, but in the opposite direction. Therefore, we simply need to change the sign of $\\varphi$:\n",
+    "Let us think geometrically and try to find the inverse of this matrix. When multiplying a vector $\\mathbf{u}$, the product $R\\mathbf{u} = \\tilde{\\mathbf{u}}$ is a vector rotated counterclockwise in the $xy$-plane by an angle $\\varphi$, measured from the positive $x$ axis. An inverse of $R$, $R^{-1}$, has to be such that $ R^{-1}\\tilde{\\mathbf{u}} = \\mathbf{u}$, i.e. it will act to rotate by exactly the same angle, but in the opposite direction. Therefore, we simply need to change the sign of $\\varphi$:\n",
     "\n",
     "$$ R^{-1} = \\begin{pmatrix} \\cos (-\\varphi) & -\\sin (-\\varphi) \\\\ \\sin (-\\varphi) & \\cos (-\\varphi) \\end{pmatrix}. $$\n",
     "\n",
-    "Recall that sine is an odd function (\\\\( \\sin(-\\varphi) = -\\sin \\varphi\\\\)), while cosine is even ($ \\cos (-\\varphi) = \\cos \\varphi $):\n",
+    "Recall that sine is an odd function ($ \\sin(-\\varphi) = -\\sin \\varphi$), while cosine is even ($ \\cos (-\\varphi) = \\cos \\varphi $):\n",
     "\n",
     "$$ R^{-1} = \\begin{pmatrix} \\cos \\varphi & \\sin \\varphi \\\\ -\\sin \\varphi & \\cos \\varphi \\end{pmatrix} = R^T. $$\n",
     "\n",
@@ -386,7 +386,7 @@
     "\n",
     "## Cramer's rule\n",
     "\n",
-    "Let \\\\(A = (a_1, a_2, ..., a_n) \\\\) be a square matrix (real or complex) such that \\\\( \\det A \\neq 0\\\\). Then for all $\\mathbf{b}$, the equation $A\\mathbf{x} = \\mathbf{b}$ has a unique solution $\\mathbf{x}$. Furthermore, the coordinates $x_i$ of the solution $\\mathbf{x}$ are given by the formula:\n",
+    "Let $A = (a_1, a_2, ..., a_n) $ be a square matrix (real or complex) such that $ \\det A \\neq 0$. Then for all $\\mathbf{b}$, the equation $A\\mathbf{x} = \\mathbf{b}$ has a unique solution $\\mathbf{x}$. Furthermore, the coordinates $x_i$ of the solution $\\mathbf{x}$ are given by the formula:\n",
     "\n",
     "$$ x_i = \\frac{\\det(a_1, ..., a_{i-1}, b, a_{i+1}, ..., a_n)}{\\det(a_1, ..., a_n)}, $$\n",
     "\n",
@@ -429,13 +429,13 @@
     "\n",
     "Simply put, vector *norms* are a measure of vector length. We will often represent a dataset in the form of a vector, so having some kind of scalar measure for vectors will be very useful in solving many kinds of problems (e.g. regression).\n",
     "\n",
-    "A norm is a function \\\\( \\lVert \\cdot \\rVert : \\mathbb{C}^m \\to \\mathbb{R} \\\\) such that for all \\\\( \\mathbf{x}, \\mathbf{y} \\in \\mathbb{C}^m \\\\) and \\\\( \\alpha \\in \\mathbb{C} \\\\):\n",
+    "A norm is a function $ \\lVert \\cdot \\rVert : \\mathbb{C}^m \\to \\mathbb{R} $ such that for all $ \\mathbf{x}, \\mathbf{y} \\in \\mathbb{C}^m $ and $ \\alpha \\in \\mathbb{C} $:\n",
     "\n",
-    "1. \\\\( \\lVert \\mathbf{x} \\rVert \\geq 0, \\\\) with \\\\( \\lVert \\mathbf{x} \\rVert = 0 \\\\) iff \\( \\mathbf{x} = \\mathbf{0} \\\\) (\\\\(\\mathbf{x}\\) is a *null-vector*),\n",
-    "2. \\\\(\\lVert \\alpha \\mathbf{x} \\rVert = | \\alpha | \\lVert \\mathbf{x} \\rVert\\\\) (scaling a vector scales its norm by the same amount),\n",
-    "3. \\\\(\\lVert \\mathbf{x} + \\mathbf{y} \\rVert \\leq \\lVert \\mathbf{x} \\rVert + \\lVert \\mathbf{y} \\rVert \\\\) (triangle inequality).\n",
+    "1. $ \\lVert \\mathbf{x} \\rVert \\geq 0, $ with $ \\lVert \\mathbf{x} \\rVert = 0 $ iff \\( \\mathbf{x} = \\mathbf{0} $ ($\\mathbf{x}\\) is a *null-vector*),\n",
+    "2. $\\lVert \\alpha \\mathbf{x} \\rVert = | \\alpha | \\lVert \\mathbf{x} \\rVert$ (scaling a vector scales its norm by the same amount),\n",
+    "3. $\\lVert \\mathbf{x} + \\mathbf{y} \\rVert \\leq \\lVert \\mathbf{x} \\rVert + \\lVert \\mathbf{y} \\rVert $ (triangle inequality).\n",
     "\n",
-    "The most common norm is **Euclidean norm**, which gives the length of the vector as the Euclidean distance from the origin (magnitude). This is perhaps our intuitive idea of vector length, a consequence of Pythagorean theorem (in n dimensions). For a vector \\\\( \\mathbf{x} \\in \\mathbb{R}^n \\\\), the Euclidean norm is given by a square of a dot product of $\\mathbf{x}$ with itself, which is the inner product we saw before:\n",
+    "The most common norm is **Euclidean norm**, which gives the length of the vector as the Euclidean distance from the origin (magnitude). This is perhaps our intuitive idea of vector length, a consequence of Pythagorean theorem (in n dimensions). For a vector $ \\mathbf{x} \\in \\mathbb{R}^n $, the Euclidean norm is given by a square of a dot product of $\\mathbf{x}$ with itself, which is the inner product we saw before:\n",
     "\n",
     "$$ \\lVert \\mathbf{x} \\rVert_2 = \\sqrt{\\mathbf{x}^T \\mathbf{x}} = \\sqrt{\\sum\\nolimits_{i=1}^n x_i^2}. $$\n",
     "\n",
@@ -445,11 +445,11 @@
     "\n",
     "This is because now each of the additive terms $\\overline{z}_i z_i$ is the squared modulus $|z_i|^2$, for $i = 1, ..., n$.\n",
     "\n",
-    "The Euclidean norm is also called the $L_2$-norm or simply 2-norm. It is part of a larger class of norms called **p-norms**. For a general vector \\\\( \\mathbf{x} \\in \\mathbb{C}^n \\\\):\n",
+    "The Euclidean norm is also called the $L_2$-norm or simply 2-norm. It is part of a larger class of norms called **p-norms**. For a general vector $ \\mathbf{x} \\in \\mathbb{C}^n $:\n",
     "\n",
     "$$ \\lVert \\mathbf{x} \\rVert_p = \\left( \\sum_{i=1}^n | x_i |^p \\right)^{1/p}, \\qquad p \\geq 1. $$\n",
     "\n",
-    "Let us also consider the **taxicab norm** ($p = 1$) and the **infinity norm** (\\\\(\\lim\\limits_{p \\to \\infty} \\lVert \\mathbf{x} \\rVert_p\\\\)). The $L_1$ norm is the sum of the absolute values:\n",
+    "Let us also consider the **taxicab norm** ($p = 1$) and the **infinity norm** ($\\lim\\limits_{p \\to \\infty} \\lVert \\mathbf{x} \\rVert_p$). The $L_1$ norm is the sum of the absolute values:\n",
     "\n",
     "$$ \\lVert \\mathbf{x} \\rVert_1 = \\sum_{i=1}^n | x_i |, $$\n",
     "\n",
@@ -463,7 +463,7 @@
     "\n",
     "### Examples\n",
     "\n",
-    "Let us consider a vector \\\\(\\mathbf{x} = (3, -4)^T \\\\). We can simply calculate the $L_1$, $L_2$ and infinity norms:\n",
+    "Let us consider a vector $\\mathbf{x} = (3, -4)^T $. We can simply calculate the $L_1$, $L_2$ and infinity norms:\n",
     "\n",
     "$$\\lVert \\mathbf{x} \\rVert_1 = |3| + |{-4}| = 7 \\\\\n",
     "\\lVert \\mathbf{x} \\rVert_2 = \\sqrt{|3|^2 + |{-4}|^2} = 5 \\\\\n",
