--- a/notebooks/c_mathematics/linear_algebra/5_Matrices.ipynb
+++ b/notebooks/c_mathematics/linear_algebra/5_Matrices.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "**Slide 3** \n",
     "\n",
-    "Remember: when stating the dimension of a matrix (e.g. \\\\(3 \\times 3\\\\), \\\\(2 \\times 4\\\\), etc) it's **R**ows Fi**R**st, **C**olumns Se**C**ond. \n",
+    "Remember: when stating the dimension of a matrix (e.g. $3 \\times 3$, $2 \\times 4$, etc) it's **R**ows Fi**R**st, **C**olumns Se**C**ond. \n",
     "\n",
     "Define matrices using `numpy.array`, and find their dimensions using `numpy.shape`."
    ]
@@ -140,7 +140,7 @@
    "source": [
     "The two matrices being added together must have the same dimension. If they do not, Python will give `ValueError`. \n",
     "\n",
-    "Adding mE ( \\\\(2 \\times 2\\\\) ) and mB ( \\\\(2 \\times 4\\\\) ): "
+    "Adding mE ( $2 \\times 2$ ) and mB ( $2 \\times 4$ ): "
    ]
   },
   {
@@ -301,7 +301,7 @@
    "source": [
     "## Solving systems of linear equations \n",
     "\n",
-    "Find solutions of a system of linear equations of the form \\\\( A \\mathbf{x} = \\mathbf{b} \\\\) using `numpy.linalg.solve(A, b)`."
+    "Find solutions of a system of linear equations of the form $ A \\mathbf{x} = \\mathbf{b} $ using `numpy.linalg.solve(A, b)`."
    ]
   },
   {
@@ -380,7 +380,7 @@
     "\n",
     "````\n",
     "\n",
-    "Let us check that `A @ A_inv` gives the identity matrix I. Note: You may find that some elements of the matrix are around `1e-16` (i.e. \\\\(10^{-16}\\\\) ) instead of exactly zero."
+    "Let us check that `A @ A_inv` gives the identity matrix I. Note: You may find that some elements of the matrix are around `1e-16` (i.e. $10^{-16}$ ) instead of exactly zero."
    ]
   },
   {
