--- a/notebooks/c_mathematics/linear_algebra/4_Eigenvalues_and_eigenvectors.ipynb
+++ b/notebooks/c_mathematics/linear_algebra/4_Eigenvalues_and_eigenvectors.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "Another way of representing this is by transforming a circle. We can think of a circle as a collection of points, each representing a vector from the origin.\n",
     "\n",
-    "Let us consider the effect of a transformation matrix \\\\( D = \\begin{pmatrix} 2 & 0.5 \\\\ 0.5 & 0.5 \\end{pmatrix} \\\\) on a circle."
+    "Let us consider the effect of a transformation matrix $ D = \\begin{pmatrix} 2 & 0.5 \\\\ 0.5 & 0.5 \\end{pmatrix} $ on a circle."
    ]
   },
   {
@@ -126,11 +126,11 @@
     "$$ A \\mathbf{x} - \\lambda \\mathbf{x} = \\mathbf{0}$$\n",
     "$$ (A -\\lambda I) \\mathbf{x} = \\mathbf{0} $$\n",
     "\n",
-    "Therefore, we are solving a homogeneous system of linear equations, but we want to find non-trivial solutions (\\\\( \\mathbf{x} \\neq \\mathbf{0} \\\\)). Recall from the section on null spaces that a homogeneous system will have non-zero solutions iff the matrix of the system is singular, i.e.\n",
+    "Therefore, we are solving a homogeneous system of linear equations, but we want to find non-trivial solutions ($ \\mathbf{x} \\neq \\mathbf{0} $). Recall from the section on null spaces that a homogeneous system will have non-zero solutions iff the matrix of the system is singular, i.e.\n",
     "\n",
     "$$ \\det(A - \\lambda I) = 0. $$\n",
     "\n",
-    "This is a polynomial of degree $n$ with roots $\\lambda_1, \\lambda_2, \\dots, \\lambda_k$, $k \\leq n$. This polynomial is termed the **characteristic polynomial** of $A$, where the roots of the polynomial are the eigenvalues. The eigenvectors are then found by plugging each eigenvalue back in \\\\( (A -\\lambda I) \\mathbf{x} = \\mathbf{0} \\\\) and solving it.\n",
+    "This is a polynomial of degree $n$ with roots $\\lambda_1, \\lambda_2, \\dots, \\lambda_k$, $k \\leq n$. This polynomial is termed the **characteristic polynomial** of $A$, where the roots of the polynomial are the eigenvalues. The eigenvectors are then found by plugging each eigenvalue back in $ (A -\\lambda I) \\mathbf{x} = \\mathbf{0} $ and solving it.\n",
     "\n",
     "### Example\n",
     "\n",
@@ -157,9 +157,9 @@
     "\n",
     "$$ \\left ( \\begin{array}{ccc|c} 0 & 1 & 0 & 0 \\\\ 1 & 0 & 1 & 0 \\\\ 0 & 1 & 0 & 0 \\end{array} \\right ) \\longrightarrow \\left ( \\begin{array}{ccc|c} 1 & 0 & 1 & 0 \\\\ 0 & 1 & 0 & 0 \\\\ 0 & 0 & 0 & 0 \\end{array} \\right ). $$\n",
     "\n",
-    "As expected, there is no unique solution because we required before that //((A - \\lambda I) \\\\) is singular. Therefore, we can parameterise the first equation: $x_1 = -x_3$ in terms of the free variable $x_3 = t, t \\in \\mathbb{R}$. We read from the second equation that $x_2 = 0$. The solution set is then \\\\( \\{ (-t, 0, t)^T, t \\in \\mathbb{R} \\}\\\\). If we let $t = 1$ then the eigenvector $\\mathbf{x}_1$ corresponding to eigenvalue \\\\( \\lambda_1 = 2\\\\) is $\\mathbf{x}_1 = (-1, 0, 1)^T$. We do this because we only care about the direction of the eigenvector and can scale it arbitrarily.\n",
+    "As expected, there is no unique solution because we required before that $ (A - \\lambda I) $ is singular. Therefore, we can parameterise the first equation: $x_1 = -x_3$ in terms of the free variable $x_3 = t, t \\in \\mathbb{R}$. We read from the second equation that $x_2 = 0$. The solution set is then $ \\{ (-t, 0, t)^T, t \\in \\mathbb{R} \\}$. If we let $t = 1$ then the eigenvector $\\mathbf{x}_1$ corresponding to eigenvalue $ \\lambda_1 = 2$ is $\\mathbf{x}_1 = (-1, 0, 1)^T$. We do this because we only care about the direction of the eigenvector and can scale it arbitrarily.\n",
     "\n",
-    "We leave it to the readers to convince themselves that the other two eigenvectors are \\\\( (1, \\sqrt{2}, 1)^T \\\\) and \\\\( (1, -\\sqrt{2}, 1)^T \\\\)."
+    "We leave it to the readers to convince themselves that the other two eigenvectors are $ (1, \\sqrt{2}, 1)^T $ and $ (1, -\\sqrt{2}, 1)^T $."
    ]
   },
   {
@@ -179,7 +179,7 @@
     "$$ A = \\begin{pmatrix} 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & 0 & -1 \\end{pmatrix} \\Rightarrow\n",
     "A - \\lambda I = \\begin{pmatrix} 1-\\lambda & 0 & 0 \\\\ 0 & 1-\\lambda & 0 \\\\ 0 & 0 & -1 - \\lambda \\end{pmatrix}. $$\n",
     "\n",
-    "The characteristic equation is \\\\(\\det(A - \\lambda I) = (\\lambda - 1)(\\lambda - 1)(\\lambda + 1) = (\\lambda - 1)^2(\\lambda + 1) = 0 \\\\).\n",
+    "The characteristic equation is $\\det(A - \\lambda I) = (\\lambda - 1)(\\lambda - 1)(\\lambda + 1) = (\\lambda - 1)^2(\\lambda + 1) = 0 $.\n",
     "\n",
     "We see that the eigenvalues are $\\lambda_1 = 1, \\lambda_2 = -1$, where $\\lambda_1$ is repeated twice. We therefore say that the **algebraic multiplicity**, which is the number of how many times an eigenvalue is repeated, of $\\lambda_1$ is 2 and of $\\lambda_2$ it is 1.\n",
     "\n",
@@ -257,7 +257,7 @@
     "\n",
     "$$ \\begin{pmatrix} F_n \\\\ F_{n-1} \\end{pmatrix} = \\begin{pmatrix} 1 & 1 \\\\ 1 & 0 \\end{pmatrix} \\begin{pmatrix} F_{n-1} \\\\ F_{n-2} \\end{pmatrix}.$$\n",
     "\n",
-    "This is a normal system of equations where the first one is what we are after $ F_n = F_{n-1} + F_{n-2} $ and the second one is trivial \\\\(F_{n-1} = F_{n-1}\\\\). Let us plot some of these points $(F_n, F_{n-1})$:"
+    "This is a normal system of equations where the first one is what we are after $ F_n = F_{n-1} + F_{n-2} $ and the second one is trivial $F_{n-1} = F_{n-1}$. Let us plot some of these points $(F_n, F_{n-1})$:"
    ]
   },
   {
@@ -412,7 +412,7 @@
     "& III_A = \\det A.\n",
     "\\end{align} $$\n",
     "\n",
-    "$tr A$ is called the *trace* of $A$ and it is the sum of diagonal entries: //( tr A = a_{11} + a_{22} + a_{33} \\\\). There are three roots (eigenvalues) of the characteristic equation, for which we can also find that:\n",
+    "$tr A$ is called the *trace* of $A$ and it is the sum of diagonal entries: //( tr A = a_{11} + a_{22} + a_{33} $. There are three roots (eigenvalues) of the characteristic equation, for which we can also find that:\n",
     "\n",
     "$$ \\begin{align}\n",
     "& I_A = \\lambda_1 + \\lambda_2 + \\lambda_3 \\\\\n",
@@ -427,7 +427,7 @@
     "\n",
     "## Example\n",
     "\n",
-    "Let us use the above to find the eigenvalues of \\\\( A = \\begin{pmatrix} 1 & 4 \\\\ 3 & 5 \\end{pmatrix}\\\\). We know that:\n",
+    "Let us use the above to find the eigenvalues of $ A = \\begin{pmatrix} 1 & 4 \\\\ 3 & 5 \\end{pmatrix}$. We know that:\n",
     "\n",
     "$$ \\begin{align}\n",
     "& I_A = tr A = 1 + 5 = \\lambda_1 + \\lambda_2 \\\\\n",
@@ -480,7 +480,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -494,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
