--- a/notebooks/c_mathematics/linear_algebra/6_Eigenvalues.ipynb
+++ b/notebooks/c_mathematics/linear_algebra/6_Eigenvalues.ipynb
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Eigenvalues of a \\\\( 2 \\times 2 \\\\) matrix\n",
+    "## Eigenvalues of a $ 2 \\times 2 $ matrix\n",
     "\n",
     "**Slide 18**\n",
     "\n",
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, we could work out the characteristic polynomial for \\\\( \\lambda \\\\) and then find the roots. We do that using the `np.poly(A)` function which computes \\\\( \\det ( A - \\lambda I ) \\\\) and returns a list of scalar coefficients `[X, Y, Z]` for the characteristic polynomial \\\\( X \\lambda^2 + Y \\lambda + Z \\\\)"
+    "Alternatively, we could work out the characteristic polynomial for $ \\lambda $ and then find the roots. We do that using the `np.poly(A)` function which computes $ \\det ( A - \\lambda I ) $ and returns a list of scalar coefficients `[X, Y, Z]` for the characteristic polynomial $ X \\lambda^2 + Y \\lambda + Z $"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Eigenvectors of a \\\\(2 \\times 2\\\\) matrix\n",
+    "## Eigenvectors of a $2 \\times 2$ matrix\n",
     "\n",
     "**Slide 20**\n",
     "\n",
@@ -358,7 +358,7 @@
     "\n",
     "**Slide 28**\n",
     "\n",
-    "NumPy prints out complex numbers in the form \\\\(c = a + bj\\\\), where \\\\(j\\\\) is the imaginary number. We can use `numpy.real(c)` and `numpy.imag(c)` to print the real and imaginary parts respectively."
+    "NumPy prints out complex numbers in the form $c = a + bj$, where $j$ is the imaginary number. We can use `numpy.real(c)` and `numpy.imag(c)` to print the real and imaginary parts respectively."
    ]
   },
   {
@@ -545,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Eigenvalue problem for a \\\\(3 \\times 3\\\\) matrix\n",
+    "## Eigenvalue problem for a $3 \\times 3$ matrix\n",
     "\n",
     "**Slide 37**"
    ]
@@ -587,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the values of \\\\(x_1, x_2\\\\) or \\\\(x_3\\\\) are 'free' (i.e. can be chosen arbitrarily to obtain an independent eigenvector), NumPy does not necessarily choose values of 0 or 1, which is why the eigenvectors printed out here are different from those in your notes. They still satisfy the equation \\\\( \\(A - \\lambda I) \\mathbf{x} = 0\\\\) and are still independent eigenvectors."
+    "If the values of $x_1, x_2$ or $x_3$ are 'free' (i.e. can be chosen arbitrarily to obtain an independent eigenvector), NumPy does not necessarily choose values of 0 or 1, which is why the eigenvectors printed out here are different from those in your notes. They still satisfy the equation $ (A - \\lambda I) \\mathbf{x} = 0$ and are still independent eigenvectors."
    ]
   },
   {
@@ -601,7 +601,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -615,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
