--- a/notebooks/c_mathematics/mathematical_notation/Tensors_Review.ipynb
+++ b/notebooks/c_mathematics/mathematical_notation/Tensors_Review.ipynb
@@ -17,11 +17,11 @@
     "\n",
     "In three-dimensional space, i.e. $m=3$, we can recover some familiar objects:\n",
     "\n",
-    "\\\\( \\quad \\quad n = 0\\\\): **scalar** $a$, a 0th order tensor with no intrinsic direction - e.g. temperature\n",
+    "$ \\quad \\quad n = 0$: **scalar** $a$, a 0th order tensor with no intrinsic direction - e.g. temperature\n",
     "\n",
-    "\\\\( \\quad \\quad n = 1\\\\): **vector** $a_i$, a 1st order tensor that has a magnitude and direction at each point in space - e.g. acceleration\n",
+    "$ \\quad \\quad n = 1$: **vector** $a_i$, a 1st order tensor that has a magnitude and direction at each point in space - e.g. acceleration\n",
     "\n",
-    "\\\\( \\quad \\quad n = 2\\\\): **2nd order tensor** (dyad) $a_{ij}$, describes the relationship between other algebraic objects related to vector fields - e.g. stress tensor\n",
+    "$ \\quad \\quad n = 2$: **2nd order tensor** (dyad) $a_{ij}$, describes the relationship between other algebraic objects related to vector fields - e.g. stress tensor\n",
     "\n",
     "Later we will introduce a special rank-3 tensor (triad), the Levi-Civita symbol $\\varepsilon_{ijk}$ which therefore has three indices, $i, j, k$."
    ]
@@ -110,12 +110,12 @@
     "\n",
     "Kronecker delta is a function of two variables which has a value of 1 if the two variables are the same, or 0 if they are not.\n",
     "\n",
-    "\\\\( \\delta_{ij} = \\left\\{\n",
-    "    \\begin{array}\\\\\n",
+    "$$ \\delta_{ij} =\n",
+    "    \\begin{cases}\n",
     "        1 & \\mbox{($i = j$)} \\\\ \n",
     "        0 & \\mbox{($i \\neq j$)} \n",
-    "    \\end{array}\n",
-    "\\right.\\\\)\n",
+    "    \\end{cases} \n",
+    "$$\n",
     "\n",
     "The values can be arranged into a 2x2 matrix, which will be identical to the identity matrix. Kronecker delta can be also expressed as $\\delta_{ij}=\\mathbf{\\hat{e}}_i\\cdot\\mathbf{\\hat{e}}_j$.\n",
     "\n",
@@ -135,10 +135,11 @@
     "\n",
     "**Cross product** $\\boldsymbol{c}$ of two vectors $\\boldsymbol{a}$ and $\\boldsymbol{b}$ in tensor notation can be expressed as:\n",
     "\n",
-    "$$ c_k \\mathbf{\\hat{e}}_k=\\mathbf{c} = \\mathbf{a}\\times\\mathbf{b} = (a_i\\mathbf{\\hat{e}}_i)\\times (b_j\\mathbf{\\hat{e}}_j)=a_ib_j(\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\parallel\\cdot \\mathbf{\\hat{e}}_k,\\\\\n",
-    "c_k \\mathbf{\\hat{e}}_k\\cdot\\mathbf{\\hat{e}}_k=c_k=a_i b_j (\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\cdot\\mathbf{\\hat{e}}_k$$.\n",
+    "$$ c_k \\mathbf{\\hat{e}}_k=\\mathbf{c} = \\mathbf{a}\\times\\mathbf{b} = (a_i\\mathbf{\\hat{e}}_i)\\times (b_j\\mathbf{\\hat{e}}_j)=a_ib_j(\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\parallel\\cdot \\mathbf{\\hat{e}}_k$$\n",
     "\n",
-    "The Levi-Civita symbol is then equal to $\\varepsilon_{ijk} = (\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\cdot\\mathbf{\\hat{e}}_k$ and in general, cross product can be expressed in tensor notation as:\n",
+    "$$c_k \\mathbf{\\hat{e}}_k\\cdot\\mathbf{\\hat{e}}_k=c_k=a_i b_j (\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\cdot\\mathbf{\\hat{e}}_k $$\n",
+    "\n",
+    "The Levi-Civita symbol is then equal to $\\varepsilon_{ijk} = (\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\cdot\\mathbf{\\hat{e}}_k$ and in general, cross product can be expressed in tensor notation as - \n",
     "\n",
     "$$ (\\boldsymbol{a} \\times \\boldsymbol{b} )_i = \\varepsilon_{ijk} a_j b_k, $$\n",
     "\n",
@@ -161,7 +162,7 @@
     "\n",
     "$$ \\mbox{Triple vector product:} \\quad \\quad \\mathbf{a} \\times (\\mathbf{b} \\times \\mathbf{c}) = (\\mathbf{a} \\cdot \\mathbf{c})\\mathbf{b} - (\\mathbf{a} \\cdot \\mathbf{b})\\mathbf{c} \\quad \\mbox{or} \\quad \\varepsilon_{ijk}a_k(\\varepsilon_{klm}b_lc_m) = (a_jc_j)b_i - (a_jb_j)c_i $$\n",
     "\n",
-    "Here we note that each component of \\\\(\\varepsilon_{ijk}a_k(\\varepsilon_{klm}b_lc_m) \\\\) when written in index notation is just a number, as it points to one of its elements - i.e. $a_k$ is the kth element of $\\mathbf{a}$. This means that we can commute them. The LHS can then be written, for example, as \\\\( \\varepsilon_{ijk}\\varepsilon_{klm}a_kb_lc_m \\\\), or in any other order we want. This is one of the advantages of tensor notation, as we **cannot** do this in matrix notation!\n",
+    "Here we note that each component of $\\varepsilon_{ijk}a_k(\\varepsilon_{klm}b_lc_m) $ when written in index notation is just a number, as it points to one of its elements - i.e. $a_k$ is the kth element of $\\mathbf{a}$. This means that we can commute them. The LHS can then be written, for example, as $ \\varepsilon_{ijk}\\varepsilon_{klm}a_kb_lc_m $, or in any other order we want. This is one of the advantages of tensor notation, as we **cannot** do this in matrix notation!\n",
     "\n",
     "$$ \\mbox{Determinant in 2D:} \\quad \\quad \\text{det}M = \\varepsilon_{ij}m_{1i}m_{2j} $$\n",
     "\n",
@@ -182,12 +183,19 @@
     "\n",
     "$$ \\mbox{Determinant in 3D:} \\quad \\quad \\text{det}M = \\varepsilon_{ijk}m_{1i}m_{2j}m_{3k} $$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -201,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
