Maths fixes: numerical methods pt1

--- a/notebooks/c_mathematics/numerical_methods/3_Timestepping_an_ODE.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/3_Timestepping_an_ODE.ipynb
@@ -10,37 +10,37 @@
     "```\n",
     "## What is timestepping?\n",
     "\n",
-    "The numerical solution of ordinary differential equations (ODEs) is a big topic. A common type of ODE you will come across will only include a first derivative with respect to an independent variable. This won't necessarily be time \\\\(t\\\\) (it might be space \\\\(x\\\\)), but we can always \"interpret\" this indepedent as \"time\" or a time-like variable. This is why we commonly talk about **\"timestepping\"** an ODE even though there are lots of scenarios where you will be doing this for problems either where \\\\(t\\\\) doesn't appear, or isn't the variable the derivative has been taken with respect to!\n",
+    "The numerical solution of ordinary differential equations (ODEs) is a big topic. A common type of ODE you will come across will only include a first derivative with respect to an independent variable. This won't necessarily be time $t$ (it might be space $x$), but we can always \"interpret\" this indepedent as \"time\" or a time-like variable. This is why we commonly talk about **\"timestepping\"** an ODE even though there are lots of scenarios where you will be doing this for problems either where $t$ doesn't appear, or isn't the variable the derivative has been taken with respect to!\n",
     "\n",
     "```{admonition} What would you do with a problem that includes higher than first order derivative? \n",
     ":class: dropdown\n",
-    "An example comes from Newton's second law, which tells us about acceleration (or rate of change of momentum), but we want to solve for position (\\\\(x\\\\)), i.e. we're thinking about an ODE in the form \\\\(\\ddot{x}=f\\\\).  Well we can always convert higher order problems into a system of ODEs only involving first order derivatives by introducing \"dummy\" variables. In the Newton's second law example just introduce velocity, then we can rewrite our second order problem \\\\(\\ddot{x}=f\\\\) as the coupled first order problem \\\\(\\dot{x}=u,\\dot{u}=f\\\\). An example of how to simplify a second order derivative can be found in {ref}`here <nm_runge_kutta_higher_order_ode>`.\n",
+    "An example comes from Newton's second law, which tells us about acceleration (or rate of change of momentum), but we want to solve for position ($x$), i.e. we're thinking about an ODE in the form $\\ddot{x}=f$.  Well we can always convert higher order problems into a system of ODEs only involving first order derivatives by introducing \"dummy\" variables. In the Newton's second law example just introduce velocity, then we can rewrite our second order problem $\\ddot{x}=f$ as the coupled first order problem $\\dot{x}=u,\\dot{u}=f$. An example of how to simplify a second order derivative can be found in {ref}`here <nm_runge_kutta_higher_order_ode>`.\n",
     "```\n",
     "\n",
     "```{margin} Note\n",
-    "On the LHS we could also use the notation \\\\(\\dot{u}\\\\) or \\\\(\\frac{du}{dt}\\\\).\n",
+    "On the LHS we could also use the notation $\\dot{u}$ or $\\frac{du}{dt}$.\n",
     "```\n",
     "Let's suppose we have an ODE of the form\n",
     "\n",
-    "\\\\[u' = f(t,u).\\\\]\n",
+    "$$u' = f(t,u).$$\n",
     "\n",
-    "This is describing a solution function of the form \\\\(y\\equiv u(t)\\\\), i.e. the solution \\\\(u\\\\) is a function of one variable - \\\\(t\\\\).\n",
+    "This is describing a solution function of the form $y\\equiv u(t)$, i.e. the solution $u$ is a function of one variable - $t$.\n",
     "\n",
-    "\\\\(u\\\\) is called the **dependent variable** and \\\\(t\\\\) the **independent variable**.\n",
+    "$u$ is called the **dependent variable** and $t$ the **independent variable**.\n",
     "\n",
     "```{margin} Note\n",
-    "In the case where \\\\(u\\\\) is multi-dimensional - a vector of unknowns/dependent variables - we would talk about a system of ODEs. For the case where there are more than one independent variables then we need to start thinking about partial differential equations (PDEs).\n",
+    "In the case where $u$ is multi-dimensional - a vector of unknowns/dependent variables - we would talk about a system of ODEs. For the case where there are more than one independent variables then we need to start thinking about partial differential equations (PDEs).\n",
     "```\n",
     "\n",
     "For example,\n",
     "\n",
-    "\\\\[u' = \\exp(t), \\qquad\\text{or equivalently} \\qquad u' = u,\\\\]\n",
+    "$$u' = \\exp(t), \\qquad\\text{or equivalently} \\qquad u' = u,$$\n",
     "\n",
-    "where first example shows the RHS as a function of \\\\(t\\\\) only, the second a function of \\\\(u\\\\) only. \n",
+    "where first example shows the RHS as a function of $t$ only, the second a function of $u$ only. \n",
     "\n",
-    "This is an example where both \\\\(t\\\\) and \\\\(u\\\\) appear on the RHS:\n",
+    "This is an example where both $t$ and $u$ appear on the RHS:\n",
     "\n",
-    "\\\\[u' = u + t^3.\\\\]\n",
+    "$$u' = u + t^3.$$\n",
     "\n",
     "The first two examples are relatively easy for us to solve analytically, the final case is a bit more challenging and we may need to resort to a numerical approach (or attempt symbolic computation)."
    ]
@@ -63,70 +63,70 @@
     "\n",
     "From the notebook on {ref}Taylor series <taylor_series> we know that (assuming smoothness of the solution) the following is true:\n",
     "\n",
-    "\\\\[ u(t+\\Delta t) = u(t) + \\Delta t  u'(t) + \\frac{\\Delta t^2}{2!}u''(t) + \\frac{\\Delta t^3}{3!}u'''(t) + \\mathcal{O}(\\Delta t^4).\\\\]\n",
+    "$$ u(t+\\Delta t) = u(t) + \\Delta t  u'(t) + \\frac{\\Delta t^2}{2!}u''(t) + \\frac{\\Delta t^3}{3!}u'''(t) + \\mathcal{O}(\\Delta t^4).$$\n",
     " \n",
-    "Using the notation \\\\(u_n=u(t_n)\\\\), \\\\(u'_n=u'(t_n)\\\\) etc, and assuming a uniform time step size \\\\(\\Delta t\\\\), this is equivalent to \n",
+    "Using the notation $u_n=u(t_n)$, $u'_n=u'(t_n)$ etc, and assuming a uniform time step size $\\Delta t$, this is equivalent to \n",
     "\n",
-    "\\\\[ u_{n+1} = u_n + \\Delta t u'_n + \\frac{\\Delta t^2}{2!}u''_n + \\frac{\\Delta t^3}{3!}u'''_n + \\mathcal{O}(\\Delta t^4).\\\\]\n",
+    "$$ u_{n+1} = u_n + \\Delta t u'_n + \\frac{\\Delta t^2}{2!}u''_n + \\frac{\\Delta t^3}{3!}u'''_n + \\mathcal{O}(\\Delta t^4).$$\n",
     "\n",
-    "Dropping second-order terms (which we can justify if \\\\(u\\\\) is \"smooth\", which means that \\\\(u''\\\\) is \"well-behaved\", and \\\\(\\Delta t\\\\) is chosen to be sufficiently small so that the terms containing higher powers of \\\\(\\Delta t\\\\) are relatively speaking very small), \n",
+    "Dropping second-order terms (which we can justify if $u$ is \"smooth\", which means that $u''$ is \"well-behaved\", and $\\Delta t$ is chosen to be sufficiently small so that the terms containing higher powers of $\\Delta t$ are relatively speaking very small), \n",
     "\n",
-    "and noting that \\\\(u'_n = f(t_n,y_n)\\\\) we are left with the discrete relation\n",
+    "and noting that $u'_n = f(t_n,y_n)$ we are left with the discrete relation\n",
     "\n",
-    "\\\\[u_{n+1} = u_n + \\Delta t f(t_n,y_n).\\\\]\n",
+    "$$u_{n+1} = u_n + \\Delta t f(t_n,y_n).$$\n",
     "\n",
     "This is a very famous ODE solver, or time-stepping method - termed the [**forward Euler**](https://en.wikipedia.org/wiki/Euler_method) or **explicit Euler** method. We have turned the continuous problem into a discrete one, hence we have discretised it.\n",
     "\n",
-    "Euler method is known as an explicit method, because the function \\\\(f\\\\) in this relation is evaluated at the old time level \\\\(t\\\\), i.e. we have all the information required at time \\\\(t\\\\) to explicitly compute the right-hand-side,\n",
-    "and hence easily find the new value for \\\\(u(t+\\Delta t)\\\\).\n",
+    "Euler method is known as an explicit method, because the function $f$ in this relation is evaluated at the old time level $t$, i.e. we have all the information required at time $t$ to explicitly compute the right-hand-side,\n",
+    "and hence easily find the new value for $u(t+\\Delta t)$.\n",
     "\n",
     "To illustrate Euler's method, and convey the fundamental idea of all time stepping methods, we'll use Euler's method to solve one of the simplest of all ODEs:\n",
     "\n",
-    "\\\\[ u'(t)=u(t),\\\\\\\\\\\\\n",
-    "u(0)=1.\\\\]\n",
+    "$$ u'(t)=u(t),\\\\\\\\\\\\\n",
+    "u(0)=1.$$\n",
     "\n",
-    "We know that at \\\\(t = 0\\\\), \\\\(u(t=0) = 1\\\\). We also know that \\\\(u'(t)=u(t)\\\\) and thus \\\\(u'(t=0)=u(t=0)\\\\).\n",
+    "We know that at $t = 0$, $u(t=0) = 1$. We also know that $u'(t)=u(t)$ and thus $u'(t=0)=u(t=0)$.\n",
     "\n",
-    "Since \\\\(u(t=0)=1\\\\), then \\\\(u'(t=0) = 1\\\\). We can use that to substitute to the Euler scheme.\n",
+    "Since $u(t=0)=1$, then $u'(t=0) = 1$. We can use that to substitute to the Euler scheme.\n",
     "\n",
-    "To obtain \\\\(u(t+\\Delta t)\\\\), we have timestep \\\\(\\Delta t = 0.05\\\\) and \\\\(u(t=0) = 1\\\\) and \\\\(u'(t=0) = 1\\\\):\n",
+    "To obtain $u(t+\\Delta t)$, we have timestep $\\Delta t = 0.05$ and $u(t=0) = 1$ and $u'(t=0) = 1$:\n",
     "\n",
-    "\\\\[u(t+\\Delta t)=u(t)+ \\Delta t f(u(t),t).\\\\]\n",
+    "$$u(t+\\Delta t)=u(t)+ \\Delta t f(u(t),t).$$\n",
     "\n",
-    "We know that the solution to this equation is \\\\(u(t)=e^t\\\\), but let's ignore that for one moment and evaluate \\\\(u(0.1)\\\\) using Euler's method with steps of \\\\(0.05\\\\). The first step is:\n",
+    "We know that the solution to this equation is $u(t)=e^t$, but let's ignore that for one moment and evaluate $u(0.1)$ using Euler's method with steps of $0.05$. The first step is:\n",
     "\n",
-    "\\\\[u(0.05)\\approx u(0)+0.05u'(0)\\approx 1+0.05\\times 1 =1.05.\\\\]\n",
+    "$$u(0.05)\\approx u(0)+0.05u'(0)\\approx 1+0.05\\times 1 =1.05.$$\n",
     "\n",
-    "Here, we found that \\\\(u\\\\) is 1.05, but actually \\\\(e^{0.05} = 1.05127\\\\), thus we have more than the actual value by a small percentage of 0.12%. This 0.12% error comes from the truncation error from us dropping \\\\(O(\\Delta t^2)\\\\) from our calculation.\n",
+    "Here, we found that $u$ is 1.05, but actually $e^{0.05} = 1.05127$, thus we have more than the actual value by a small percentage of 0.12%. This 0.12% error comes from the truncation error from us dropping $O(\\Delta t^2)$ from our calculation.\n",
     "\n",
-    "Now that we know \\\\(u(0.05)\\\\), we can calculate the second step. We know that at \\\\(t = 0.05\\\\), \\\\(u(t=0.05) = 1.05\\\\)\n",
+    "Now that we know $u(0.05)$, we can calculate the second step. We know that at $t = 0.05$, $u(t=0.05) = 1.05$\n",
     "\n",
-    "We also know that \\\\(u'(t)=u(t)\\\\) and thus \\\\(u'(t=0.05)=u(t=0.05)\\\\).\n",
+    "We also know that $u'(t)=u(t)$ and thus $u'(t=0.05)=u(t=0.05)$.\n",
     "\n",
-    "Since \\\\(u(t=0.05)=1.05\\\\), then \\\\(u'(u = 1.05, t=0.05) = 1.05\\\\).\n",
+    "Since $u(t=0.05)=1.05$, then $u'(u = 1.05, t=0.05) = 1.05$.\n",
     "\n",
-    "We can then use what we obtained to substitute into the Euler scheme. To obtain \\\\(u(t+\\Delta t)\\\\), we have timestep \\\\(\\Delta t = 0.05\\\\) and \\\\( u(t=0.05) = 1.05\\\\) and \\\\(u'(u=1.05, t=0.05) = 1.05\\\\):\n",
+    "We can then use what we obtained to substitute into the Euler scheme. To obtain $u(t+\\Delta t)$, we have timestep $\\Delta t = 0.05$ and $ u(t=0.05) = 1.05$ and $u'(u=1.05, t=0.05) = 1.05$:\n",
     "\n",
-    "\\\\[u(0.1)\\approx u(0.05)+0.05u'(0.05)=1.05+.05\\times1.05=1.1025.\\\\]\n",
+    "$$u(0.1)\\approx u(0.05)+0.05u'(0.05)=1.05+.05\\times1.05=1.1025.$$\n",
     "\n",
-    "Now the actual value of \\\\(e^{0.1}\\\\) is around \\\\(1.1051\\\\) so we're 0.236% higher and only 2 steps into the algorithm. The 0.236% comes from the truncation error when we went from 0 to 0.05, and the truncation error when we went from 0.05 to 0.10. Note that the truncation errors are compounded. The truncation error from 0 to 0.05 will result in greater truncation error when going from 0.05 to 0.10. These truncation errors are cumulative, and old truncation errors result in greater new truncation errors, which makes them quickly become rather significant. \n",
+    "Now the actual value of $e^{0.1}$ is around $1.1051$ so we're 0.236% higher and only 2 steps into the algorithm. The 0.236% comes from the truncation error when we went from 0 to 0.05, and the truncation error when we went from 0.05 to 0.10. Note that the truncation errors are compounded. The truncation error from 0 to 0.05 will result in greater truncation error when going from 0.05 to 0.10. These truncation errors are cumulative, and old truncation errors result in greater new truncation errors, which makes them quickly become rather significant. \n",
     "\n",
-    "The formula given is used to calculate the value of \\\\(u(t)\\\\) one time step forward from the last known value. The error is therefore the local truncation error. If we actually wish to know the value at some fixed time \\\\(T\\\\) then we will have to calculate \\\\((T-t_0)/h\\\\) steps of the method, since the distance from \\\\(T\\\\) to \\\\(t_0\\\\) is \\\\(T-t_0\\\\) and the length of each step is \\\\(h\\\\). This sum over \\\\(O(1/\\Delta t)\\\\) steps results in a global truncation error for Euler's method of \\\\(O(\\Delta t)\\\\).\n",
+    "The formula given is used to calculate the value of $u(t)$ one time step forward from the last known value. The error is therefore the local truncation error. If we actually wish to know the value at some fixed time $T$ then we will have to calculate $(T-t_0)/h$ steps of the method, since the distance from $T$ to $t_0$ is $T-t_0$ and the length of each step is $h$. This sum over $O(1/\\Delta t)$ steps results in a global truncation error for Euler's method of $O(\\Delta t)$.\n",
     "\n",
-    "In other words, Euler's method is only **1st order accurate** - if we halve \\\\(\\Delta t\\\\) we will need to do double the amount of work and the error should correspondingly halve.\n",
+    "In other words, Euler's method is only **1st order accurate** - if we halve $\\Delta t$ we will need to do double the amount of work and the error should correspondingly halve.\n",
     "\n",
     "\n",
     "### Graphical representation\n",
     "\n",
     "Let's consider the simple model problem \n",
     "\n",
-    "\\\\[y' = y\\\\]\n",
+    "$$y' = y$$\n",
     "\n",
     "with the initial condition\n",
     "\n",
-    "\\\\[y(0)=1\\\\]\n",
+    "$$y(0)=1$$\n",
     "\n",
-    "and see what one step of the forward Euler method does, we will assume that we start at some \\\\(t\\\\) from the exact solution at that time, i.e. the starting point indicated by the red dot in the following image is on the exact solution (black) line:"
+    "and see what one step of the forward Euler method does, we will assume that we start at some $t$ from the exact solution at that time, i.e. the starting point indicated by the red dot in the following image is on the exact solution (black) line:"
    ]
   },
   {
@@ -199,13 +199,13 @@
     "\n",
     "The next step computes\n",
     "\n",
-    "\\\\[u_{n+1} = u_n + \\Delta t f(t_n,u_n),\\\\]\n",
+    "$$u_{n+1} = u_n + \\Delta t f(t_n,u_n),$$\n",
     "\n",
-    "but note that \\\\(f\\\\) for this particular simple test case is simply \\\\(u\\\\). \n",
+    "but note that $f$ for this particular simple test case is simply $u$. \n",
     "\n",
-    "We assume that we don't know what the exact solution is at this time level, and hence we can't read off the correct \\\\(t\\\\) from the \\\\(x\\\\) axis in the above plot and compute \\\\(\\exp(t)\\\\) in the RHS of our update. If we could then this would let us use the correct new slope at this time, i.e. the slope at the black dot.  \n",
+    "We assume that we don't know what the exact solution is at this time level, and hence we can't read off the correct $t$ from the $x$ axis in the above plot and compute $\\exp(t)$ in the RHS of our update. If we could then this would let us use the correct new slope at this time, i.e. the slope at the black dot.  \n",
     "\n",
-    "Instead we are forced to read off the \\\\(u\\\\) axis - notice that in this example this gives us a \\\\(u\\\\) value that is too small, and hence an \\\\(f\\\\) that is too small. Therefore our next update will give us a second point that is even more too small.\n",
+    "Instead we are forced to read off the $u$ axis - notice that in this example this gives us a $u$ value that is too small, and hence an $f$ that is too small. Therefore our next update will give us a second point that is even more too small.\n",
     "\n",
     "The moral of the story here is that **errors generally accumulate**, as we can see if we plot this next step of the algorithm:"
    ]
@@ -275,16 +275,16 @@
    "source": [
     "### Implementation\n",
     "\n",
-    "We will write a function `euler(f,u0,t0,t_max,dt)` that takes as arguments the function \\\\(f(u,t)\\\\) on the RHS of our ODE,\n",
-    "an initial value for \\\\(u\\\\), the start and end time of the integration, and the time step.\n",
+    "We will write a function `euler(f,u0,t0,t_max,dt)` that takes as arguments the function $f(u,t)$ on the RHS of our ODE,\n",
+    "an initial value for $u$, the start and end time of the integration, and the time step.\n",
     "\n",
-    "We will use it to integrate the following ODEs up to time \\\\(t=10\\\\)\n",
+    "We will use it to integrate the following ODEs up to time $t=10$\n",
     "\n",
-    "\\\\[u'(t)=u(t),\\quad u(0)=1\\\\]\n",
+    "$$u'(t)=u(t),\\quad u(0)=1$$\n",
     "\n",
     "and \n",
     "\n",
-    "\\\\[u'(t)=\\cos(t),\\quad u(0)=0\\\\]\n",
+    "$$u'(t)=\\cos(t),\\quad u(0)=0$$\n",
     "\n",
     "and plot the results."
    ]
@@ -379,9 +379,13 @@
    "metadata": {},
    "source": [
     "If we were to solve these ODEs analytically, the solution for the first one would reveal an exponential function\n",
-    "\\\\[u(t)=\\exp(t),\\\\]\n",
+    "\n",
+    "$$u(t)=\\exp(t),$$\n",
+    "\n",
     "while the second one would show a sine wave\n",
-    "\\\\[u(t)=\\sin(t)+1.\\\\]\n",
+    "\n",
+    "$$u(t)=\\sin(t)+1$$\n",
+    "\n",
     "How do the numerical solutions compare to the analytical solutions?"
    ]
   },
@@ -451,7 +455,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -465,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.8"
   },
   "toc": {
    "base_numbering": 1,
