--- a/notebooks/c_mathematics/numerical_methods/4_Heuns_method.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/4_Heuns_method.ipynb
@@ -16,33 +16,33 @@
     "\n",
     "Heun's method may be derived by attempting to use derivative information at both the start and the end of the interval:\n",
     "\n",
-    "\\\\[u(t+\\Delta t)\\approx u(t)+\\frac{\\Delta t}{2}\\left(u'(t)+u'(t+\\Delta t)\\right),\\\\\\\\\\\\\n",
-    "  u(t+\\Delta t)\\approx u(t)+\\frac{\\Delta t}{2}\\big(f(u(t),t)+f(u(t+\\Delta t),t+\\Delta t)\\big).\\\\]\n",
+    "$$u(t+\\Delta t)\\approx u(t)+\\frac{\\Delta t}{2}\\left(u'(t)+u'(t+\\Delta t)\\right),\\\\\\\\\\\\\n",
+    "  u(t+\\Delta t)\\approx u(t)+\\frac{\\Delta t}{2}\\big(f(u(t),t)+f(u(t+\\Delta t),t+\\Delta t)\\big).$$\n",
     "\n",
-    "The difficulty with this approach is that we now require \\\\(u(t+\\Delta t)\\\\) in order to calculate the final term in the equation, and that's what we set out to calculate so we don't know it yet! So at this point we have an example of an implicit algorithm and at this stage the above ODE solver would be referred to as the trapezoidal method if we could solve it exactly for \\\\(u(t+\\Delta t)\\\\).\n",
+    "The difficulty with this approach is that we now require $u(t+\\Delta t)$ in order to calculate the final term in the equation, and that's what we set out to calculate so we don't know it yet! So at this point we have an example of an implicit algorithm and at this stage the above ODE solver would be referred to as the trapezoidal method if we could solve it exactly for $u(t+\\Delta t)$.\n",
     "\n",
-    "Heun's method, unlike Euler method, is an implicit method, meaning that we do not have all of the information needed. While we have the information about \\\\(u(t)\\\\) and \\\\(f(u(t),t)\\\\), we lack information about \\\\(u(t+\\Delta t)\\\\) and \\\\(f(u(t+\\Delta t),t)\\\\), and we have to deal with not knowing these things somehow. \n",
+    "Heun's method, unlike Euler method, is an implicit method, meaning that we do not have all of the information needed. While we have the information about $u(t)$ and $f(u(t),t)$, we lack information about $u(t+\\Delta t)$ and $f(u(t+\\Delta t),t)$, and we have to deal with not knowing these things somehow. \n",
     "\n",
-    "The simplest solution to this dilemma, the one adopted in Heun's method, is to use a first guess at \\\\(x(t+\\Delta t)\\\\) calculated using Euler's method:\n",
+    "The simplest solution to this dilemma, the one adopted in Heun's method, is to use a first guess at $x(t+\\Delta t)$ calculated using Euler's method:\n",
     "\n",
-    "\\\\[ \\tilde{u}(t+\\Delta t)=u(t)+\\Delta tf(u(t),t). \\\\]\n",
+    "$$ \\tilde{u}(t+\\Delta t)=u(t)+\\Delta tf(u(t),t). $$\n",
     "\n",
-    "This first guess is then used to solve for \\\\(u(t+\\Delta t)\\\\) using:\n",
+    "This first guess is then used to solve for $u(t+\\Delta t)$ using:\n",
     "\n",
-    "\\\\[ u(t+\\Delta t)\\approx u(t)+\\frac{\\Delta t}{2}\\big(f(u(t),t)+f(\\tilde{u}(t+\\Delta t),t+\\Delta t)\\big).\\\\]\n",
+    "$$ u(t+\\Delta t)\\approx u(t)+\\frac{\\Delta t}{2}\\big(f(u(t),t)+f(\\tilde{u}(t+\\Delta t),t+\\Delta t)\\big).$$\n",
     "\n",
-    "The generic term for schemes of this type is **predictor-corrector**. The initial calculation of \\\\(\\tilde{u}(t+\\Delta t)\\\\) is used to predict the new value of \\\\(u\\\\) and then this is used in a more accurate calculation to produce a more correct value. \n",
+    "The generic term for schemes of this type is **predictor-corrector**. The initial calculation of $\\tilde{u}(t+\\Delta t)$ is used to predict the new value of $u$ and then this is used in a more accurate calculation to produce a more correct value. \n",
     "\n",
-    "Note that Heun's method is \\\\(O(\\Delta t^2)\\\\), i.e. **2nd order accurate**.\n",
+    "Note that Heun's method is $O(\\Delta t^2)$, i.e. **2nd order accurate**.\n",
     "\n",
     "## Implementation\n",
     "\n",
-    "We will write a function `heun(f,u0,t0,t_max,dt)` that takes as arguments the function \\\\(f(u,t)\\\\) on the RHS of our ODE,\n",
-    "an initial value for \\\\(u\\\\), the start and end time of the integration, and the time step.\n",
+    "We will write a function `heun(f,u0,t0,t_max,dt)` that takes as arguments the function $f(u,t)$ on the RHS of our ODE,\n",
+    "an initial value for $u$, the start and end time of the integration, and the time step.\n",
     "\n",
-    "We will use it to integrate the following ODEs up to time \\\\(t=10\\\\)\n",
+    "We will use it to integrate the following ODEs up to time $t=10$\n",
     "\n",
-    "\\\\[u'(t)=u(t),\\quad u(0)=1,\\\\]\n",
+    "$$u'(t)=u(t),\\quad u(0)=1,$$\n",
     "\n",
     "plot the results and compare them to Euler method.\n",
     "\n",
