--- a/notebooks/c_mathematics/numerical_methods/7_FTCS.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/7_FTCS.ipynb
@@ -8,31 +8,35 @@
     "# FTCS scheme\n",
     "```{index} FTCS scheme\n",
     "```\n",
-    "[Forward Time Centred Space](https://en.wikipedia.org/wiki/FTCS_scheme) (FTCS) scheme is a method of solving {ref}`heat equation <heat_separation_of_variables>` (or in general parabolic PDEs). In this scheme, we approximate the spatial derivatives at the current time step and the time derivative between current and new time step:\n",
+    "[Forward Time Centred Space](https://en.wikipedia.org/wiki/FTCS_scheme) (FTCS) scheme is a method of solving {ref}`heat equation <heat_separation_of_variables>` (or in general parabolic PDEs). In this scheme, we approximate the spatial derivatives at the current time step and the time derivative between current and new time step: \n",
     "\n",
-    "\\\\[\\quad t = t_0+n\\Delta t,\\quad x=x_0+i\\Delta x,\\\\\\\\\\\\\n",
+    "$$\\quad t = t_0+n\\Delta t,\\quad x=x_0+i\\Delta x,\\\\\\\\\\\\\n",
     "\\frac{\\partial u}{\\partial t}\\approx \\frac{u_{i}^{n+1}-u_{i}^{n}}{\\Delta t},\\\\\\\\\\\\\n",
-    "\\frac{\\partial u}{\\partial x}\\approx \\frac{u_{i+1}^{n}-u_{i-1}^{n}}{2\\Delta x},\\quad \\frac{\\partial^2 u}{\\partial x^2}\\approx \\frac{u_{i+1}^{n}-2u_{i}^{n}+u_{i-1}^{n}}{\\Delta x^2}.\\\\]\n",
+    "\\frac{\\partial u}{\\partial x}\\approx \\frac{u_{i+1}^{n}-u_{i-1}^{n}}{2\\Delta x},\\quad \\frac{\\partial^2 u}{\\partial x^2}\\approx \\frac{u_{i+1}^{n}-2u_{i}^{n}+u_{i-1}^{n}}{\\Delta x^2}.$$\n",
     "\n",
-    "The FCTS scheme is first order in time and up to 2nd order in space. It can be always rearranged into the following form:\n",
-    "\\\\[u_{i}^{n+1}=u_{i}^{n}+\\Delta t f(u_{i}^{n}, u_{i+1}^{n}, u_{i-1}^{n}).\\\\]\n",
+    "The FCTS scheme is first order in time and up to 2nd order in space. It can be always rearranged into the following form: \n",
+    "\n",
+    "$$u_{i}^{n+1}=u_{i}^{n}+\\Delta t f(u_{i}^{n}, u_{i+1}^{n}, u_{i-1}^{n}).$$\n",
     "\n",
     "```{admonition} Exercise\n",
     ":class: dropdown\n",
     "Derive an FTCS solution to the equation:\n",
-    "\\\\[\\frac{\\partial u}{\\partial t}=D\\frac{\\partial^2 u}{\\partial x^2}.\\\\]\n",
+    "\n",
+    "$$\\frac{\\partial u}{\\partial t}=D\\frac{\\partial^2 u}{\\partial x^2}.$$\n",
     "\n",
     "Forward difference in time:\n",
-    "\\\\[\\frac{\\partial u}{\\partial t}= \\frac{u_{i}^{n+1}-u_{i}^{n}}{\\Delta t}.\\\\]\n",
+    "\n",
+    "$$\\frac{\\partial u}{\\partial t}= \\frac{u_{i}^{n+1}-u_{i}^{n}}{\\Delta t}.$$\n",
     "\n",
     "Central difference in space:\n",
-    "\\\\[\\frac{\\partial^2 u}{\\partial x^2}= \\frac{u_{i+1}^{n}-2u_{i}^{n}+u_{i-1}^{n}}{\\Delta x^2}.\\\\]\n",
+    "\n",
+    "$$\\frac{\\partial^2 u}{\\partial x^2}= \\frac{u_{i+1}^{n}-2u_{i}^{n}+u_{i-1}^{n}}{\\Delta x^2}.$$\n",
     "\n",
     "Differentials combined in our equation:\n",
-    "\\\\[\\frac{u_{i}^{n+1}-u_{i}^{n}}{\\Delta t}=\\frac{u_{i+1}^{n}-2u_{i}^{n}+u_{i-1}^{n}}{\\Delta x^2}.\\\\]\n",
+    "$$\\frac{u_{i}^{n+1}-u_{i}^{n}}{\\Delta t}=\\frac{u_{i+1}^{n}-2u_{i}^{n}+u_{i-1}^{n}}{\\Delta x^2}.$$\n",
     "\n",
     "Rearrange the terms to get:\n",
-    "\\\\[u_{i}^{n+1}=u_{i}^{n}+D\\frac{\\Delta t}{\\Delta x^2}\\Big(u_{i+1}^{n}-2u_{i}^{n}+u_{i-1}^{n}\\Big).\\\\]\n",
+    "$$u_{i}^{n+1}=u_{i}^{n}+D\\frac{\\Delta t}{\\Delta x^2}\\Big(u_{i+1}^{n}-2u_{i}^{n}+u_{i-1}^{n}\\Big).$$\n",
     "\n",
     "\n",
     "```\n",
@@ -47,34 +51,40 @@
     "\n",
     "```{index} Explicit scheme\n",
     "```\n",
-    "FCTS is an [explicit scheme](https://en.wikipedia.org/wiki/Explicit_and_implicit_methods), where new time step value depends only on the current time step value. These schemes are quick to program and each time step runs quickly. A disadvantage to such schemes is that sometimes very small \\\\(\\Delta t\\\\) are required for numerical stability.\n",
+    "FCTS is an [explicit scheme](https://en.wikipedia.org/wiki/Explicit_and_implicit_methods), where new time step value depends only on the current time step value. These schemes are quick to program and each time step runs quickly. A disadvantage to such schemes is that sometimes very small $\\Delta t$ are required for numerical stability.\n",
     "\n",
-    "Numerical stability is an issue in any explicit scheme as any effect can only move by a maximum of one spatial grid block in one time step. For example, a purely 1st order (convective) system FTCS is unconditionally unstable:\n",
-    "\\\\[\\frac{\\partial u}{\\partial t}=-\\nu\\frac{\\partial u}{\\partial x}\\quad\\rightarrow\\quad u_{i}^{n+1}=u_{i}^{n}-\\Delta t \\nu \\frac{u_{i+1}^{n}-u_{i-1}^{n}}{2\\Delta x}.\\\\]\n",
+    "Numerical stability is an issue in any explicit scheme as any effect can only move by a maximum of one spatial grid block in one time step. For example, a purely 1st order (convective) system FTCS is unconditionally unstable: \n",
+    "\n",
+    "$$\\frac{\\partial u}{\\partial t}=-\\nu\\frac{\\partial u}{\\partial x}\\quad\\rightarrow\\quad u_{i}^{n+1}=u_{i}^{n}-\\Delta t \\nu \\frac{u_{i+1}^{n}-u_{i-1}^{n}}{2\\Delta x}.$$\n",
     "\n",
     "\n",
     "### Lax-Friedrichs scheme\n",
     "\n",
-    "For a purely convective equation a simple substitution can make it stable. For example, if we substitute \\\\(u_{i}^{n}\\\\) in the time derivative with \\\\(\\frac{u_{i+1}^{n}+u_{i-1}^{n}}{2}\\\\), the we get a solution:\n",
-    "\\\\[u_{i}^{n+1}=\\frac{u_{i+1}^{n}+u_{i-1}^{n}}{2}-\\Delta t \\nu \\frac{u_{i+1}^{n}-u_{i-1}^{n}}{2\\Delta x}.\\\\]\n",
+    "For a purely convective equation a simple substitution can make it stable. For example, if we substitute $u_{i}^{n}$ in the time derivative with $\\frac{u_{i+1}^{n}+u_{i-1}^{n}}{2}$, the we get a solution: \n",
     "\n",
-    "This solution is stable if [CFL condition](https://en.wikipedia.org/wiki/Courant%E2%80%93Friedrichs%E2%80%93Lewy_condition) is met:\n",
-    "\\\\[\\Delta t \\leq \\frac{\\Delta x}{|\\nu|}.\\\\]\n",
+    "$$u_{i}^{n+1}=\\frac{u_{i+1}^{n}+u_{i-1}^{n}}{2}-\\Delta t \\nu \\frac{u_{i+1}^{n}-u_{i-1}^{n}}{2\\Delta x}.$$\n",
+    "\n",
+    "This solution is stable if [CFL condition](https://en.wikipedia.org/wiki/Courant%E2%80%93Friedrichs%E2%80%93Lewy_condition) is met: \n",
+    "\n",
+    "$$\\Delta t \\leq \\frac{\\Delta x}{|\\nu|}.$$\n",
     "\n",
     "Why does [Lax-Friedrichs](https://en.wikipedia.org/wiki/Lax%E2%80%93Friedrichs_method) method makes an FTCS scheme stable?\n",
     "\n",
-    "\\\\[\\text{LAX:}\\quad \\frac{\\partial u}{\\partial t}=-\\nu\\frac{\\partial u}{\\partial x} \\quad \\rightarrow \\quad u_{i}^{n+1}=u_{i+1}^{n}\\Big(\\frac{1}{2}-\\frac{\\Delta t \\nu}{2\\Delta x}\\Big)+u_{i-1}^{n}\\Big(\\frac{1}{2}+\\frac{\\Delta t \\nu}{2\\Delta x}\\Big).\\\\]\n",
+    "$$\\text{LAX:}\\quad \\frac{\\partial u}{\\partial t}=-\\nu\\frac{\\partial u}{\\partial x} \\quad \\rightarrow \\quad u_{i}^{n+1}=u_{i+1}^{n}\\Big(\\frac{1}{2}-\\frac{\\Delta t \\nu}{2\\Delta x}\\Big)+u_{i-1}^{n}\\Big(\\frac{1}{2}+\\frac{\\Delta t \\nu}{2\\Delta x}\\Big).$$\n",
     "\n",
-    "\\\\[\\text{FCTS:}\\quad\\frac{\\partial u}{\\partial t}=-\\nu \\frac{\\partial u}{\\partial x}+D\\frac{\\partial^2 u}{\\partial x^2}\\quad\\rightarrow\\quad u_{i}^{n+1}=u_{i}^{n}\\Big(1-\\frac{2D\\Delta t}{\\Delta x^2}\\Big)+u_{i+1}^{n}\\Big(\\frac{D\\Delta t}{\\Delta x^2}-\\frac{\\Delta t\\nu}{2\\Delta x}\\Big)+\\\\\\\\\\\\\n",
-    "+u_{i-1}^{n}\\Big(\\frac{D\\Delta t}{\\Delta x^2}+\\frac{\\Delta t\\nu}{2\\Delta x}\\Big).\\\\]\n",
+    "$$\\text{FCTS:}\\quad\\frac{\\partial u}{\\partial t}=-\\nu \\frac{\\partial u}{\\partial x}+D\\frac{\\partial^2 u}{\\partial x^2}\\quad\\rightarrow\\quad u_{i}^{n+1}=u_{i}^{n}\\Big(1-\\frac{2D\\Delta t}{\\Delta x^2}\\Big)+u_{i+1}^{n}\\Big(\\frac{D\\Delta t}{\\Delta x^2}-\\frac{\\Delta t\\nu}{2\\Delta x}\\Big)+\\\\\\\\\\\\\n",
+    "+u_{i-1}^{n}\\Big(\\frac{D\\Delta t}{\\Delta x^2}+\\frac{\\Delta t\\nu}{2\\Delta x}\\Big).$$\n",
     "\n",
     "These two approximations are equivalent, if\n",
-    "\\\\[D=\\frac{\\Delta x^2}{2\\Delta t}.\\\\]\n",
+    "\n",
+    "$$D=\\frac{\\Delta x^2}{2\\Delta t}.$$\n",
     "\n",
     "The Lax-Friedrichs scheme introduces thus an artificial (numerical) diffusion. The FTCS scheme for a convective diffusion equation is stable if:\n",
-    "\\\\[\\Delta t \\leq \\frac{\\Delta x^2}{2D}\\\\]\n",
+    "\n",
+    "$$\\Delta t \\leq \\frac{\\Delta x^2}{2D}$$\n",
     "and\n",
-    "\\\\[\\Delta t \\leq \\frac{\\Delta x}{|\\nu|}.\\\\]\n",
+    "\n",
+    "$$\\Delta t \\leq \\frac{\\Delta x}{|\\nu|}.$$\n",
     "\n",
     "The conditions must be met at every point in the domain."
    ]
@@ -86,16 +96,19 @@
     "## Heat transfer solution with FTCS method\n",
     "\n",
     "We will use an FTCS approximation of\n",
-    "\\\\[\\frac{\\partial T}{\\partial t}=k\\frac{\\partial^2 T}{\\partial x^2}\\\\]\n",
-    "to calculate the evolution of temperature in a rod of length 1. The initial temperature of the rod will be set at 100 but the ends of the rod will be kept constant at 0. The heat conductivity will be set at \\\\(k=0.01\\\\). The rod will be divided into 100 intervals (101 points).\n",
     "\n",
-    "At first we will need to discretise the problem. We will expand all terms with forward difference for time derivative and central difference for spatial derivative:\n",
+    "$$ \\frac{\\partial T}{\\partial t}=k\\frac{\\partial^2 T}{\\partial x^2} $$\n",
     "\n",
-    "\\\\[\\frac{T_{i}^{n+1}-T_{i}^{n}}{\\Delta t}=k\\frac{T_{i+1}^{n}-2T_{i}^{n}+T_{i-1}^{n}}{\\Delta x^2},\\\\\\\\\\\\\n",
-    "T_{i}^{n+1}=T_{i}^{n}+\\frac{k\\Delta t}{\\Delta x^2}\\Big(T_{i+1}^{n}-2T_{i}^{n}+T_{i-1}^{n}\\Big).\\\\]\n",
+    "to calculate the evolution of temperature in a rod of length 1. The initial temperature of the rod will be set at 100 but the ends of the rod will be kept constant at 0. The heat conductivity will be set at $k=0.01$. The rod will be divided into 100 intervals (101 points).\n",
     "\n",
-    "From the CFL condition, we know that for the solution to be stable, we need to ensure that:\n",
-    "\\\\[\\Delta t \\leq \\frac{\\Delta x^2}{2k}.\\\\]"
+    "At first we will need to discretise the problem. We will expand all terms with forward difference for time derivative and central difference for spatial derivative: \n",
+    "\n",
+    "$$\\frac{T_{i}^{n+1}-T_{i}^{n}}{\\Delta t}=k\\frac{T_{i+1}^{n}-2T_{i}^{n}+T_{i-1}^{n}}{\\Delta x^2},\\\\\\\\\\\\\n",
+    "T_{i}^{n+1}=T_{i}^{n}+\\frac{k\\Delta t}{\\Delta x^2}\\Big(T_{i+1}^{n}-2T_{i}^{n}+T_{i-1}^{n}\\Big).$$\n",
+    "\n",
+    "From the CFL condition, we know that for the solution to be stable, we need to ensure that: \n",
+    "\n",
+    "$$\\Delta t \\leq \\frac{\\Delta x^2}{2k}.$$"
    ]
   },
   {
@@ -218,7 +231,7 @@
     "The solution was obtained after 8,522 iterations. \n",
     "\n",
     "\n",
-    "What happens when \\\\(\\Delta t\\\\) is larger than the one given by the CFL condition?"
+    "What happens when $\\Delta t$ is larger than the one given by the CFL condition?"
    ]
   },
   {
@@ -304,14 +317,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the solution went unstable immediately for a larger \\\\(\\Delta t\\\\)."
+    "We can see that the solution went unstable immediately for a larger $\\Delta t$."
    ]
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -325,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
